# Gen_AI_Literary_Recommendation

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tasks.py
app/: main.py
app/core/: config.py  errors.py  utils.py
app/data/referential/: books_clean.csv  books_reference.csv  questions.json
app/domain/: profiling.py  recommendation.py  schemas.py  scoring.py
app/nlp/: __init__.py  embeddings.py  matcher.py  pipeline.py  preprocess.py  similarity.py
app/pages/: 1_Questionnaire.py  2_Resultats.py  3_Referentiel.py
app/scripts/: check_ref.py
app/services/: analytics.py  genai.py  models.py  referential_loader.py  storage.py
app/ui/: forms.py  state.py  theme.py  viz.py  widgets.py
scripts/: build_book_embeddings.py  sanity_check_referential.py
tests/: test_matcher.py  test_recommendation.py  test_scoring.py
